# modern_prog_course

./: .gitignore  README.md  after_refactoring_iosipov.cpp
multi-project project/: build.bat  run_tests.bat
multi-project project/projects/: CMakeLists.txt
multi-project project/projects/doubly_linked_list/: CMakeLists.txt
multi-project project/projects/doubly_linked_list/src/: CMakeLists.txt  doubly_linked_list.cpp  doubly_linked_list.hpp
multi-project project/projects/doubly_linked_list/test/: CMakeLists.txt  test_doubly_linked_list.cpp
multi-project project/projects/insertion_sort/: CMakeLists.txt  run_insertion_sort.bat
multi-project project/projects/insertion_sort_mf/: CMakeLists.txt  run_insertion_sort_mf.bat
multi-project project/projects/insertion_sort_mf/sortings/: CMakeLists.txt
multi-project project/projects/long_number/: CMakeLists.txt
multi-project project/projects/long_number/src/: CMakeLists.txt  long_number.cpp  long_number.hpp
multi-project project/projects/long_number/test/: CMakeLists.txt  test_long_number.cpp
multi-project project/projects/multi_level_menu/: CMakeLists.txt  run_menu.bat
multi-project project/projects/multi_level_menu/menuitem/: CMakeLists.txt  menu_functions.hpp  menu_items.cpp
multi-project project/projects/sort/: CMakeLists.txt
multi-project project/projects/sort/src/: CMakeLists.txt
multi-project project/projects/sort/test/: CMakeLists.txt  test_insertion.cpp
multi-project project/projects/vector/: CMakeLists.txt
multi-project project/projects/vector/src/: CMakeLists.txt  vector.cpp  vector.hpp
(+20 files in other folders)
